--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="/src/scripts/404.js"></script>
   </body>
 </html>
