--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         if (u.indexOf('/#') === -1 && u.indexOf('index.html') === -1) {
           var n = u.split('/').length;
           if (u[n - 1].length > 0) {
-            var p = u.indexOf('/index.html');
+            var p = u.indexOf('index.html');
             if (p === -1) {
               p = u.length;
             }
